--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ktustudyguide",
+  "name": "ktufailed",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,16 +10,16 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.55.0",
-    "next": "14.2.8",
+    "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "22.5.4",
+    "@types/react": "18.3.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "5.5.4"
   }
 }
